--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,32 @@ authors = [
 ]
 dependencies = [
 
+
     "numpy>=1.22.0",
+
 
     "pandas>=1.4.0",
 
+
     "matplotlib>=3.5.0",
+
 
     "seaborn>=0.11.2",
 
+
     "scikit-learn>=1.0.2",
+
 
     "jupyter>=1.0.0",
 
+
     "ipykernel>=6.9.0",
 
+
     "openai>=1.43.0",
+
+
+    "ruff>=0.6.3",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
